<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0F0"
    tools:context=".RemindmeRegister">

    <!-- TODO: Update blank fragment layout -->
    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp" />

    <TextView
        android:id="@+id/returnLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/returnTologin"
        android:textAlignment="center"
        android:textColor="#393838"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/askAdminLY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F5F5"
        android:visibility="gone">

        <TextView
            android:id="@+id/refreshpromptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="279dp"
            android:layout_marginTop="139dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="50dp"
            android:text="refresh"
            android:textColor="#232222"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="302dp"
            android:layout_height="287dp"
            android:background="#F4AFC7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/askAdminTxT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/askadmin"
                android:textAlignment="center"
                android:textColor="#3A3939"
                android:textSize="25sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/applypromptTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noapply"
                android:textAlignment="center"
                android:textColor="#3A3939"
                android:textSize="25sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>